src/test/ui/no_share-struct.stderr
error[E0277]: `Foo` cannot be shared between threads safely
  --> $DIR/no_share-struct.rs:12:9
   |
LL | fn bar<T: Sync>(_: T) {}
   |    ---    ---- required by this bound in `bar`
...
LL |     bar(x);
   |         ^ `Foo` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
